--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!--Hero Section Start-->
 
-    <div>
+    <div class="hero">
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
